--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.1
 cycler==0.12.1
+dlib==19.22.0
 filelock==3.13.3
 Flask==3.0.3
 fonttools==4.51.0
